--- a/visualizations/rap_network/attempt_5/index (1).html
+++ b/visualizations/rap_network/attempt_5/index (1).html
@@ -38,9 +38,7 @@
             </div>
             <div id="svg-wrapper" class="nine columns"></div>
             <div class="arrow row">
-                <a href="#writing-content">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Angle_down_font_awesome.svg/512px-Angle_down_font_awesome.svg.png" class="down-arrow">
-                </a>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Angle_down_font_awesome.svg/512px-Angle_down_font_awesome.svg.png" class="down-arrow">
             </div>
         </div>
         <div id="writing-content" class="container">
@@ -107,7 +105,7 @@
             </p>
 
             <div class="section-divider"></div>
-            <p><a href="http://www.arkadyark.me/visualizations/rap_network/attempt_1" target="_blank">As</a> <a href="http://www.arkadyark.me/visualizations/rap_network/attempt_2" target="_blank">you</a> <a href="http://www.arkadyark.me/visualizations/rap_network/attempt_3" target="_blank">can</a> <a href="http://www.arkadyark.me/visualizations/rap_network/attempt_4" target="_blank">see</a>, this project went through several iterations before it became what it currently is. For the more tech-interested readers, all of the source code is over <a href="https://github.com/arkadyark/arkadyark.github.io/tree/master/visualizations/rap_network">on my Github</a>. Fork this and make something cool!
+            <p><a href="http://www.arkadyark.me/visualizations/rap_network/attempt_1">As</a> <a href="http://www.arkadyark.me/visualizations/rap_network/attempt_2">you</a> <a href="http://www.arkadyark.me/visualizations/rap_network/attempt_3">can</a> <a href="http://www.arkadyark.me/visualizations/rap_network/attempt_4">see</a>, this project went through several iterations before it became what it currently is. For the more tech-interested readers, all of the source code is over <a href="https://github.com/arkadyark/arkadyark.github.io/tree/master/visualizations/rap_network">on my Github</a>. Fork this and make something cool!
             <div class="section-divider"></div>
             <p>
             Thanks a bunch for checking this out. A like/share would be appreciated. 
